# rust-zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230820113115_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  wow.rs
src/domain/: subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs
