[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.173", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.1", default-features = false, features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "tls-rustls",
] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1.4.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"

[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1.18.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
