[package]
name = "zero2prod"
version = "0.1.0"
authors = ["nelson <leelhn2345@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7.1", default-features = false, features = [
  "runtime-tokio",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "tls-rustls",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4.20"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.18", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rand = { version = "0.8.5", features = ["std_rng"] }

[dev-dependencies]
once_cell = "1.7.2"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.6.1"
wiremock = "0.5.19"
serde_json = "1.0.105"
linkify = "0.10.0"
